# Home_proj_1

./: .gitignore  main.py
SkyPro/Lesson/Lesson_13.2_(Урок 13.2 Режимы доступа)/: 3_.py  dz.py  dz.txt  less_13.2-2.py  less_13.2.py
SkyPro/Lesson/Lesson_14_1/: 14_1.py
SkyPro/Lesson/Lesson_15.1(Наследование)/: 15_1.py
SkyPro/Lesson/Lesson_15_2/: 15_2.py  main.py
SkyPro/Lesson/lesson_12_2_test/: .coverage  12.2.py  main.py  pyproject.toml  utils.py
SkyPro/Lesson/lesson_12_2_test/pythonProject5/: func.py  test_my_func.py
SkyPro/Lesson/lesson_12_2_test/tests/: test_utils.py  utils.py
SkyPro/dz/13.2/: dz_13.2.py  main.py
SkyPro/dz/dz_8/: utils.py
SkyPro/kuzn/: kuzn_kurs_2.py  main.py
odnostrochniki/: 15_25.py  main.py
